crates/celox/tests/snapshots/native_mir__rle_comb_mir.snap
---
source: crates/celox/tests/native_mir.rs
expression: output
---
=== MIR used by native emission ===
=== Native function eval_comb ===
--- MIR after main optimization, before regalloc-owned late folds ---
bb0:
  v0 = load.i32 [sim + 40]
  v1 = load.i32 [sim + 44]
  v2 = add.w32 v0, v1
  store.i32 [sim + 48], v2
  ret
--- MIR after late memory folds, before allocation-owned scheduling ---
bb0:
  v0 = load.i32 [sim + 40]
  v1 = load.i32 [sim + 44]
  v2 = add.w32 v0, v1
  store.i32 [sim + 48], v2
  ret
--- MIR after allocation-owned scheduling, before spill reconstruction ---
bb0:
  v0 = load.i32 [sim + 40]
  v1 = load.i32 [sim + 44]
  v2 = add.w32 v0, v1
  store.i32 [sim + 48], v2
  ret
--- MIR after register allocation and post-RA peepholes ---
bb0:
  v0 = load.i32 [sim + 40]
  v1 = load.i32 [sim + 44]
  v2 = add.w32 v0, v1
  store.i32 [sim + 48], v2
  ret
Spill frame: 0 bytes
Register assignment:
  v0 -> rax
  v1 -> rdx
  v2 -> rax
x86-64 disassembly of emitted function:
  0x00000000  rdgsbase rax
  0x00000005  movq xmm15,rax
  0x0000000a  wrgsbase rdi
bb0:
  0x0000000f  mov eax,[gs:28h]
  0x00000018  mov edx,[gs:2Ch]
  0x00000020  add eax,edx
  0x00000022  mov [gs:30h],eax
  0x0000002b  xor eax,eax
  0x0000002d  jmp short 000000000000002Fh
  0x0000002f  movq r11,xmm15
  0x00000034  wrgsbase r11
  0x00000039  ret
